[project]
name = "air-pollution-prediction"
version = "0.1.0"
description = "A project for predicting air pollution PM2.5 levels using Linear Regression and XGBoost."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ipykernel>=6.30.1",
  "matplotlib>=3.8,<3.10",
  "notebook",
  "numpy>=2.1,<3",
  "pandas>=2.2.2",
  "scikit-learn>=1.4,<1.6",
  "scipy>=1.13.1",
  "tqdm>=4.67.1",
  "xgboost>=3.1.1",
  "xlrd>=2.0.2",
]
